// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header component should match its snapshot (in home) 1`] = `
<header
  className=""
  id="main-header"
>
  <div
    className="centering-container"
  >
    <div
      className="top"
    >
      <div
        className="logo"
      >
        <Link
          to="/"
        >
          <img
            alt="DP logo"
            src="images/logo.png"
          />
        </Link>
      </div>
      <nav>
        <ul>
          <li>
            <NavLink
              activeClassName="active"
              exact={true}
              to="/"
            >
              Home
            </NavLink>
          </li>
          <li>
            <NavLink
              activeClassName="active"
              exact={true}
              to="/about"
            >
              About
            </NavLink>
          </li>
          <li>
            <NavLink
              activeClassName="active"
              exact={true}
              to="/work"
            >
              Work
            </NavLink>
          </li>
          <li>
            <NavLink
              activeClassName="active"
              exact={true}
              to="/contact"
            >
              Contact
            </NavLink>
          </li>
        </ul>
      </nav>
    </div>
    <div
      className="content "
    >
      <div>
        <TypeWriter
          leadingFixedText="I Am DP The"
          phrases={
            Array [
              "Demo Portfolio",
              "Greatest Portfolio",
              "Demo Portfolio Project",
              "Demo Project",
            ]
          }
          waitTime={3000}
        />
        <p>
          I specialize in portoflioing, demoing and demo portfolioing
        </p>
        <Link
          className="btn-light"
          to="/work"
        >
          View My Work
        </Link>
      </div>
    </div>
  </div>
</header>
`;

exports[`header component should match its snapshot (in non-home pages) 1`] = `
<header
  className="small"
  id="main-header"
>
  <div
    className="centering-container"
  >
    <div
      className="top"
    >
      <div
        className="logo"
      >
        <Link
          to="/"
        >
          <img
            alt="DP logo"
            src="images/logo.png"
          />
        </Link>
      </div>
      <nav>
        <ul>
          <li>
            <NavLink
              activeClassName="active"
              exact={true}
              to="/"
            >
              Home
            </NavLink>
          </li>
          <li>
            <NavLink
              activeClassName="active"
              exact={true}
              to="/about"
            >
              About
            </NavLink>
          </li>
          <li>
            <NavLink
              activeClassName="active"
              exact={true}
              to="/work"
            >
              Work
            </NavLink>
          </li>
          <li>
            <NavLink
              activeClassName="active"
              exact={true}
              to="/contact"
            >
              Contact
            </NavLink>
          </li>
        </ul>
      </nav>
    </div>
    <div
      className="content hidden"
    >
      <div>
        <TypeWriter
          leadingFixedText="I Am DP The"
          phrases={
            Array [
              "Demo Portfolio",
              "Greatest Portfolio",
              "Demo Portfolio Project",
              "Demo Project",
            ]
          }
          waitTime={3000}
        />
        <p>
          I specialize in portoflioing, demoing and demo portfolioing
        </p>
        <Link
          className="btn-light"
          to="/work"
        >
          View My Work
        </Link>
      </div>
    </div>
  </div>
</header>
`;
